fix(ui): display scrollbar in main content

--- a/www/front_src/src/styles/partials/_content.scss
+++ b/www/front_src/src/styles/partials/_content.scss
@@ -11,6 +11,7 @@
   height: 100%;
   width: 100%;
   background-color: white;
+  overflow: auto;
 }
 
 .content {
@@ -26,4 +27,5 @@
 .fullscreen-wrapper {
   flex-grow: 1;
   overflow: hidden;
+  padding-bottom: 30px;
 }
